[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scenes/MicroGames/mgBatch3Boss.gd" type="Script" id=1]
[ext_resource path="res://GFX/Batch3Boss/smash-land-dream-land.png" type="Texture" id=2]
[ext_resource path="res://GFX/Batch3Boss/fox-5.png" type="Texture" id=3]
[ext_resource path="res://GFX/Batch3Boss/krool.png" type="Texture" id=4]
[ext_resource path="res://GFX/Batch3Boss/krool-cannonball.png" type="Texture" id=5]
[ext_resource path="res://GFX/Batch3Boss/smash-land-blast.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 72 )

[sub_resource type="Animation" id=2]
resource_name = "d"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("shine:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 30, 99 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "die"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.45, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 30, 100 ), Vector2( 30, 102 ), Vector2( 30, 99 ), Vector2( 30, 102 ), Vector2( 30, 99 ), Vector2( 30, 102 ), Vector2( 30, 99 ), Vector2( 30, 99 ), Vector2( -100, 99 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "force_microgame_end"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("shine:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("shine:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 3, 2, 3, 4 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("../AnimationPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "d", -1, 1.0, false ],
"method": "play"
} ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 12, 10 )

[sub_resource type="Animation" id=7]
resource_name = "begin"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.1, 1.2, 1.3, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 1, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot_ball"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 125, 90 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "die"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.45, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 125, 90 ), Vector2( 125, 89 ), Vector2( 125, 92 ), Vector2( 125, 89 ), Vector2( 125, 92 ), Vector2( 125, 89 ), Vector2( 125, 90 ), Vector2( 125, 90 ), Vector2( 250, 90 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.95 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "krool_ded"
} ]
}

[sub_resource type="Animation" id=10]
length = 0.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=11]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "belly_hit"
} ]
}

[sub_resource type="Animation" id=12]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 1 ]
}

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 6, 16 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 8, 16 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 10, 15 )

[sub_resource type="Animation" id=16]
length = 0.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 2 ), Vector2( 0, 1 ), Vector2( 0, -2 ), Vector2( 0, -1 ) ]
}

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=18]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( -15, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.55 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Batch3Boss" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="ScreenArea" type="Area2D" parent="."]
editor/display_folded = true
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScreenArea"]
position = Vector2( 80, 72 )
shape = SubResource( 1 )

[node name="smash-land-dream-land" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Fox" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fox" groups=[
"mg_anim",
]]
root_node = NodePath("../FoxSpr")
autoplay = "d"
anims/d = SubResource( 2 )
anims/die = SubResource( 3 )
anims/shine = SubResource( 4 )

[node name="FoxSpr" type="Sprite" parent="Fox"]
position = Vector2( 30, 99 )
texture = ExtResource( 3 )
offset = Vector2( 0, -2 )
hframes = 5
__meta__ = {
"_edit_group_": true
}

[node name="shine" type="Sprite" parent="Fox/FoxSpr"]
visible = false
texture = ExtResource( 3 )
offset = Vector2( 0, -2 )
hframes = 5
frame = 2

[node name="HB" type="Area2D" parent="Fox/FoxSpr" groups=[
"char",
]]
position = Vector2( -5, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fox/FoxSpr/HB"]
shape = SubResource( 5 )

[node name="ShineHB" type="Area2D" parent="Fox/FoxSpr"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fox/FoxSpr/ShineHB"]
shape = SubResource( 6 )

[node name="KRool" type="Sprite" parent="."]
position = Vector2( 125, 90 )
scale = Vector2( -1, 1 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( -18, -21 )
hframes = 11
frame = 1
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="KRool" groups=[
"mg_anim",
]]
autoplay = "begin"
anims/begin = SubResource( 7 )
anims/d = SubResource( 8 )
anims/die = SubResource( 9 )
anims/reflect = SubResource( 10 )
anims/reflect-2 = SubResource( 11 )
anims/shoot = SubResource( 12 )

[node name="Position2D" type="Position2D" parent="KRool"]
visible = false
show_behind_parent = true
position = Vector2( 21, 0 )

[node name="BB" type="Area2D" parent="KRool" groups=[
"char",
]]
position = Vector2( 9, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KRool/BB"]
shape = SubResource( 13 )

[node name="HB" type="Area2D" parent="KRool"]
position = Vector2( -4, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KRool/HB"]
shape = SubResource( 14 )

[node name="BT" type="Area2D" parent="KRool"]
position = Vector2( 25, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KRool/BT"]
shape = SubResource( 15 )

[node name="Ball" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( -10, 80 )
rotation = -3.14159
scale = Vector2( 1, -1 )
__meta__ = {
"_edit_group_": true
}

[node name="spr" type="Sprite" parent="Ball"]
texture = ExtResource( 5 )
offset = Vector2( 3, 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Ball/spr"]
autoplay = "d"
anims/d = SubResource( 16 )

[node name="HB" type="Area2D" parent="Ball" groups=[
"ball",
]]
position = Vector2( 3, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball/HB"]
shape = SubResource( 17 )

[node name="Blast" type="Node2D" parent="."]
position = Vector2( -50, 55 )
scale = Vector2( -1, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="spr" type="Sprite" parent="Blast"]
position = Vector2( -15, 0 )
texture = ExtResource( 6 )
offset = Vector2( 33, 0 )
hframes = 6
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Blast/spr" groups=[
"mg_anim",
]]
anims/b = SubResource( 18 )
